[gd_scene load_steps=2 format=3 uid="uid://0p735beyx2tm"]

[ext_resource type="Script" uid="uid://dbg2sionio24l" path="res://game/GameOverMenu.gd" id="1_g6o1s"]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_g6o1s")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Over" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 240.0
offset_bottom = 61.0
text = "персонаж погиб 
как храбрый воин."
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 72.0
offset_right = 240.0
offset_bottom = 114.0
text = "начать заново"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 175.0
text = "выйти из игры"

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_button_pressed"]
